--- a/tp3/informe/Desarrollo4.tex
+++ b/tp3/informe/Desarrollo4.tex
@@ -14,6 +14,28 @@ Es así que nos planteamos lo siguiente: ¿qué operaciones podemos realizar de 
 Si luego de k iteraciones, con $k$ aleatorio entre 10 y 20, el algoritmo no logra reducir la cardinalidad de la solución parcial, se decide que no será posible encontrar una solución cuya cardinalidad sea menor y, por tanto, se termina la ejecución, dando como solución al problema a la solución parcial, que tiene una cardinalidad igual o menor a la solución inicial dada al algortimo.
 
 \subsection{Pseudocódigo}
+\begin{codebox}
+\Procname{$\proc{EncontrarSolucion}$ (\textbf{ConjuntoDominante} $cd$, \textbf{Comparator} $funcion$)}{cd}{Conjunto Dominante}
+\li	elijo un k aleatorio entre 10 y 20.
+\li	hasta que la cardinalidad de la solucion no cambie durante k estrategias: \Do
+\li		ElegirEstrategia(cd, funcion)
+\End
+\End
+\li	devuelvo el ConjuntoDominante cd
+\end{codebox}
+
+\begin{codebox}
+\Procname{$\proc{ElegirEstrategia}$ (\textbf{ConjuntoDominante} $cd$, \textbf{Comparator} $f$)}{res}{Boolean}
+\li	para cada una de las E estrategias: \Do
+\li		intento la estregia E en el conjunto dominante cd
+\li		Si es posible llevar a cabo la estrategia E con la funcion f: \Do
+\li			devuelvo true
+\End
+\li		Si no es posible llevar a cabo la estrategia E, sigo con la proxima estrategia
+\End
+\li si no pude llevar a cabo ninguna estrategia, aumento el contador de estrategias fallidas
+\li devuelvo false
+\end{codebox}
 
 \subsection{Complejidad}
 Para todos los casos, se corre al menos k veces, y para cada una de esas k corridas, se utilizan 3 métodos para intentar hallar una nueva solucion:
