comparaciones une ahora Goloso-LocalSearch-GRASP

--- a/tp3/informe/Comparaciones.tex
+++ b/tp3/informe/Comparaciones.tex
@@ -31,6 +31,5 @@ Por un lado, si sólo se desea encontrar un conjunto dominante, podemos utilizar
 
 \subsection{Exacto - GRASP}
 
-\subsection{Goloso - GRASP}
 
-\subsection{Local Search - GRASP}
+\subsection{Goloso - Local Search - GRASP}
